test/sema/generic-type-init-non-existing-member.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

class A<T> { }
// CHECK: 5:18: error: no member named 'd' in 'A<int>'
A::init() { this.d = 3 }
func main() { var a = A<int>() }
